<resources>
    <string name="app_name">Queens</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log Out</string>
    <string name="action_refreshs">Cash Till</string>

    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_express">Express</string>
    <string name="menu_exchange">Exchange</string>
    <string name="menu_delivered">Delivered</string>
    <string name="menu_undelivered">Undelivered</string>
    <string name="menu_returned">Returns</string>
    <string name="menu_rejected">Rejected</string>
    <string name="menu_parcels">Parcels</string>
    <string name="menu_delivered_parcel">Delivered Parcel</string>
    <string name="menu_undelivered_parcel">Undelivered Parcel</string>

    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_reg">Enter Valid Registration</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="login_success_message">Log In Successful</string>
    <string name="text_not_member">Dont have an account yet? Create One </string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match </string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="todo">TODO</string>
</resources>
